--- a/www/app.css
+++ b/www/app.css
@@ -1,12 +1,142 @@
-h1 {
-    text-decoration:none;
-    border:0;
-    width : 550px;
-    height : 50px;
-    margin : 0;
-    padding : 0;
-    left: 25px;
-    top: 5px;
+*{
+    margin: 0;
+    padding: 0;
+  }
+  section{
     position: relative;
-    background : url(logo.png) no-repeat 0 0;
+    width: 100%;
+    height: 100vh;
+    background: #3586ff;
+    overflow: auto;
+  }
+  section .air{
+    position: fixed;
+    bottom: 0;
+    left: 0;
+    width: 100%;
+    height: 67px;
+    background: url(https://1.bp.blogspot.com/-xQUc-TovqDk/XdxogmMqIRI/AAAAAAAACvI/AizpnE509UMGBcTiLJ58BC6iViPYGYQfQCLcBGAsYHQ/s1600/wave.png);
+    background-size: 1000px 100px
+  }
+  section .air.air1{
+    animation: wave 30s linear infinite;
+    z-index: 1000;
+    opacity: 0.5;
+    animation-delay: 0s;
+    bottom: 0;
+  }
+  section .air.air2{
+    animation: wave2 15s linear infinite;
+    z-index: 999;
+    opacity: 0.4;
+    animation-delay: -5s;
+    bottom: 10px;
+  }
+  section .air.air3{
+    animation: wave 30s linear infinite;
+    z-index: 998;
+    opacity: 0.2;
+    animation-delay: -2s;
+    bottom: 15px;
+  }
+  section .air.air4{
+    animation: wave2 5s linear infinite;
+    z-index: 997;
+    opacity: 0.5;
+    animation-delay: -5s;
+    bottom: 20px;
+  }
+  @keyframes wave{
+    0%{
+      background-position-x: 0px; 
+    }
+    100%{
+      background-position-x: 1000px; 
+    }
+  }
+  @keyframes wave2{
+    0%{
+      background-position-x: 0px; 
+    }
+    100%{
+      background-position-x: -1000px; 
+    }
+  }
+
+
+
+
+
+
+
+
+
+#sidebar1 {
+    background-color: #4e5d6c;
+    position: relative;
+    top:5vh;
+    left:10vw;
+    border: 3px white solid;
+    border-radius: 2%;
+    overflow: hidden;
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translatey(0px);
+    animation: float 4s ease-in-out infinite;
 }
+
+#sidebar2{
+    position: relative;
+    left:21vw;
+    border: 3px white solid;
+    border-radius: 2%;
+    overflow: hidden;
+    box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+    transform: translatey(0px);
+    animation: float 4s ease-in-out infinite;
+}
+
+#headData{
+  text-align: center;
+  width: 95vw;
+  border: 3px white solid;
+  background-color: #4e5d6c;
+  border-radius: 2%;
+  overflow: hidden;
+  box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+  transform: translatey(0px);
+}
+
+#plotData{
+  width: 95vw;
+  text-align: center;
+  margin-top: 10px;;
+  background-color: #4e5d6c;
+  position: relative;
+  border: 3px white solid;
+  border-radius: 2%;
+  overflow: hidden;
+  box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+  transform: translatey(0px);
+
+}
+
+#forScroll{
+  z-index: 1005;
+}
+
+
+
+@keyframes float {
+    0% {
+      box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+      transform: translatey(0px);
+    }
+    50% {
+      box-shadow: 0 25px 15px 0px rgba(0, 0, 0, 0.2);
+      transform: translatey(-20px);
+    }
+    100% {
+      box-shadow: 0 5px 15px 0px rgba(0, 0, 0, 0.6);
+      transform: translatey(0px);
+    }
+  }
